--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.0",
     "element-ui": "^2.15.10",
     "less": "^4.1.2",
     "less-loader": "^6.0.0",
